--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<!--SECTION 1 (Cahee)-->
-	<section is="home">
+	<section id="home">
 		<div class="first-block">
 			<div class="container">
 				<div class="header">
@@ -23,7 +23,7 @@
 							<a class="logo__link" href="#">Cahee</a>
 						</div>       
 						<button id="mobile-nav-trigger">
-							<a href="#"><img class="trigger-img" src="img/ios7-arrow-down.png" alt="menu"></a>
+							<img class="trigger-img" src="img/ios7-arrow-down.png" alt="menu">
 						</button>
 						<ul>
 							<li><a href="#home">Home</a></li>
@@ -409,7 +409,7 @@
 				<form class="six-block__form" action="#" method="post">
 					<div class="row">
 						<div class="col-10">
-							<input class="six-block__input" type="email" placeholder="Your email address..." class="" required></div>
+							<input class="six-block__input" type="email" placeholder="Your email address..." required></div>
 							<div class="col-2">
 								<button class="btn btn--subscribe-block btn__hovered" type="submit">Subscribe</button>
 							</div>
